[package]
name = "vulkan-works"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra-glm = "0.17.0"
png = "0.17.6"
pretty_env_logger = "0.4.0"
thiserror = "1.0.37"
tobj = "3.2.3"
winit = "0.27.4"
vulkanalia = { version = "=0.12.0", features = ["libloading", "window"] }